# CustomMemoryAllocator

./: .clang-format  CMakeLists.txt  CMakePresets.json
benchmark/: Buddy_allocator_benchmark.cpp  CMakeLists.txt  Pool_allocator_benchmark.cpp  Stack_allocator_benchmark.cpp
examples/: CMakeLists.txt  basic_usage.cpp
include/allocator/: AllocatorUtilities.hpp  allocatorError.hpp  allocator_interface.hpp  buddy_allocator.hpp  pool_allocator.hpp  stack_allocator.hpp
include/allocators/: allocator_interface.hpp  pool_allocator.hpp
scripts/: format.bat  format.sh
src/: buddy_allocator.cpp  pool_allocator.cpp  stack_allocator.cpp
tests/: Buddy_allocator_tests.cpp  CMakeLists.txt  Pool_allocator_tests.cpp  Stack_allocator_tests.cpp
